# soildworks-mcp-opencode-

./: CHANGELOG.md  LICENSE  NOTICE.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
agent-harness/: SOLIDWORKS.md  setup.py
agent-harness/cli_anything/solidworks/: README.md  __main__.py  solidworks_cli.py
agent-harness/cli_anything/solidworks/core/: client.py
agent-harness/cli_anything/solidworks/tests/: TEST.md
agent-harness/cli_anything/solidworks/utils/: backend.py
agent-harness/skills/cli-anything-solidworks/: SKILL.md
bridge/: Program.cs  SolidWorksBridge.csproj
src/solidworks_mcp/: server.py
